name:          sdp
version:       0.2
category:      Data Structures

synopsis:      Simple Data Processing
description:   SDP provides shared interface for simplest data operations.
               Also this package contains a few simple data structures.

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp/issues

copyright:     2019 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  hs-source-dirs:   src
  
  default-language: Haskell2010
  
  build-depends:
    base               >= 4.8   && < 5,
    ghc-prim           >= 0.5.3 && < 0.6,
    data-default-class >= 0.1   && < 0.2
  
  ghc-options: -O2 -Wall -Wno-orphans
  
  exposed-modules:
    -- common definitions
    
    Control.Exception.SDP
    Control.Monad.Rope
    
    SDP.SafePrelude
    SDP.Comparing
    SDP.Estimate
    SDP.Unboxed
    SDP.Finite
    SDP.Tuple
    SDP.Shape
    SDP.Index
    
    SDP.SortM.Insertion
    SDP.SortM.Tim
    
    -- general class modules
    
    SDP.Indexed
    SDP.Linear
    SDP.Shaped
    SDP.Map
    SDP.Set
    
    -- templates
    
    SDP.Templates.AnyBorder
    SDP.Templates.AnyChunks
    
    -- primitives
    
    SDP.Prim.SArray
    SDP.Prim.SBytes
    
    -- general structure implementations
    
    SDP.Unrolled
    SDP.ByteList
    
    SDP.Array
    SDP.Bytes
    
    -- service structures
    
    SDP.Array.ST
    SDP.Bytes.ST
    
    SDP.Unrolled.ST
    SDP.ByteList.ST
    
    SDP.Unrolled.Unlist
    SDP.ByteList.Ublist
    
    SDP.Unrolled.STUnlist
    SDP.ByteList.STUblist
    
    -- some dispensable classes
    
    SDP.Scan
    SDP.Sort
    SDP.Zip
    
    SDP.IndexedM
    SDP.LinearM
    SDP.SortM
    
    Text.Show.SDP
    Text.Read.SDP
  
  other-modules:
    SDP.Internal

