name:          sdp
version:       0.2
category:      Data Structures

synopsis:      Simple Data Processing
description:   SDP provides shared interface for simplest data operations.
               Also this package contain some simple data structures.

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp/issues

copyright:     2019 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  
  ghc-options:      -O2 -Wall -Wno-orphans
  
  build-depends:
    base               >= 4.8   && < 5,
    ghc-prim           >= 0.5.3 && < 0.6,
    data-default-class >= 0.1   && < 0.2
  
  exposed-modules:
    -- common definitions
    
    Control.Exception.SDP
    Control.Monad.Rope
    
    SDP.SafePrelude
    SDP.Comparing
    SDP.Estimate
    SDP.Nullable
    SDP.Unboxed
    SDP.Finite
    SDP.Tuple
    SDP.Shape
    SDP.Index
    SDP.Ratio
    
    SDP.SortM.Insertion
    SDP.SortM.Tim
    
    -- general class modules
    
    SDP.Indexed
    SDP.Linear
    SDP.Shaped
    SDP.Map
    SDP.Set
    
    -- templates
    
    SDP.Templates.AnyBorder
    SDP.Templates.AnyChunks
    
    -- primitives
    
    SDP.Unboxed.WordAs
    SDP.Unboxed.IntAs
    
    SDP.Prim.SArray
    SDP.Prim.SBytes
    
    SDP.Prim.IArray
    SDP.Prim.IBytes
    
    -- general structure implementations
    
    SDP.Array
    SDP.Unrolled
    SDP.Unrolled.Unlist
    
    SDP.Bytes
    SDP.ByteList
    SDP.ByteList.Ublist
    
    -- service structures
    
    SDP.Array.ST
    SDP.Unrolled.ST
    SDP.Unrolled.STUnlist
    
    SDP.Bytes.ST
    SDP.ByteList.ST
    SDP.ByteList.STUblist
    
    SDP.Array.IO
    SDP.ByteList.IO
    SDP.ByteList.IOUblist
    
    SDP.Bytes.IO
    SDP.Unrolled.IO
    SDP.Unrolled.IOUnlist
    
    -- some dispensable classes
    
    SDP.Scan
    SDP.Sort
    SDP.Zip
    
    SDP.IndexedM
    SDP.LinearM
    SDP.SortM
    
    Text.Show.SDP
    Text.Read.SDP
  
  other-modules:
    SDP.Internal


